--- a/Schor's Quantum Algorithm Theory and Simulation/main.tex
+++ b/Schor's Quantum Algorithm Theory and Simulation/main.tex
@@ -1189,7 +1189,8 @@ $$
 模拟成功。
 
 \vskip 50pt
-\textit{尽管现在很多程序库都有了Shor量子算法包，只需简单掉包即可实现素数分解。但本文从较为底层的量子门级别展开分析并编写代码，实现了Shor算法的模拟，并成功地对整数N=15进行了因数分解。量子计算仍是一个新兴的领域，我十分期待在未来的研究中能够更深入地探索量子计算的奥秘。}
+\textit{尽管现在很多程序库都有了Shor量子算法包，只需简单调包即可实现素数分解。但本文从较为底层的量子门级别展开分析并编写代码，实现了Shor算法的模拟，并成功地对整数N=15进行了因数分解。量子计算仍是一个新兴的领域，我十分期待在未来的研究中能够更深入地探索量子计算的奥秘。}
+
 
 
 
